--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -13,10 +13,35 @@ body {
 	border-radius: 0px 0px 3px 3px;
 }
 
-.main {
+#content {
 	background: #fff;
 	border-radius: 3px;
 	padding: 10px;
 	margin-bottom: 10px;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+	-moz-box-sizing: border-box
+	-webkit-box-sizing: border-box
+	box-sizing: border-box
 }
+
+.small-pic img{
+	max-width: 200px;
+	max-height: 100%;
+	padding: 10px;
+}
+
+.col-sm-9 .checkbox-inline {
+	padding-top:8px;
+}
+
+.radio{
+	padding-top:8px;
+}
+/*.form-inline select, input{
+	
+}
+
+.form-inline label{
+	width: 100%;
+}
+*/
